--- a/app/src/main/res/layout/activity_main_test.xml
+++ b/app/src/main/res/layout/activity_main_test.xml
@@ -10,34 +10,41 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:fitsSystemWindows="true"
-
-        android:layout_height="wrap_content">
+        android:layout_height="250dp"
+        android:fitsSystemWindows="true">
 
         <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/cosping_tets"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:fitsSystemWindows="true"
-            app:contentScrim="@color/colorAccent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
 
-
-            <ImageView
-                android:fitsSystemWindows="true"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_height="match_parent"
                 android:background="#f90"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/sfdlfsldkf"
-                app:layout_collapseMode="parallax" />
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#f90"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@mipmap/sfdlfsldkf"
+                    app:layout_collapseMode="parallax" />
+            </LinearLayout>
+
 
             <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbal_test"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_collapseMode="pin"
-                app:title="这是标题栏">
+                android:layout_height="50dp"
+                app:layout_collapseMode="pin">
 
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
