--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="MaterialDesignTheme" parent="AppTheme">
+
+    <style name="toolbarstyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:gravity">center</item>
     </style>
+
+    <style name="MaterialDesignTheme" parent="AppTheme"></style>
 </resources>
